name:          web-escape
version:       0.1.0.0
synopsis:      A lightweight library for character escaping.
description:
    .
    A lightweight library (depending only on base and text) for escaping
    characters in a number of web contexts. Presently supports String and
    Text data.
    .
category:      Text
homepage:      https://github.com/isturdy/web-escape
license:       PublicDomain
license-file:  UNLICENSE
author:        Ian Sturdy <sturdyi12@mail.wlu.edu>
maintainer:    Ian Sturdy <sturdyi12@mail.wlu.edu>
stability:     experimental
tested-with:
	       GHC == 7.6.2
cabal-version: >=1.8
build-type:    Simple

library
  exposed-modules:
    Text.Web.Escape
  GHC-Options:
    -Wall

  build-depends:
    base ==4.6.*,
    array == 0.4.0.*,
    text ==0.11.2.*

source-repository head
  type:     git
  location: https://github.com/isturdy/web-escape